# Ecclesia

./: CMakeLists.txt  LICENCE  Makefile  ProtobufGo.cmake
src/: CMakeLists.txt  Makefile  generate_key.go
src/directory/: CMakeLists.txt  Makefile  main.go
src/relier/: get_certificate.go  get_verifiers.go  validate_certificate.go
src/relier/directory/: directory.go
src/requestor/: CMakeLists.txt  Makefile  main.go
src/requestor/directory/: directory.go
src/requestor/randomset/: randomset.go
src/shared/: CMakeLists.txt
src/shared/protobufs/: commitreveal.proto
src/shared/protocol_common/: CMakeLists.txt  protocol_common.go
src/test/: CMakeLists.txt  generate_commitment.go  test.sh  test_randomset.go  tls_test_server.go  write_structure.go
src/utils/: CMakeLists.txt  Makefile  generate_key.go  get_verifiers.go  read_directory.go
src/utils/protobufs/: CMakeLists.txt  commitreveal.proto  generic.proto
src/validator/: CMakeLists.txt  Makefile  main.go
src/verifier/: CMakeLists.txt  Makefile  verifier.go
src/verifier/certificate/: certificate.go
src/verifier/registration/: register.go
test/: test.sh
